exports[`alternative-name.js 1`] = `
"// {\"modules\": {\"react-simple\": {\"default\": true}}}
import create from \"react-simple\";

const Foo = create(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`argument-shadow.js 1`] = `
"// {\"react-simple\": {\"default\": true}}
import simple from \"react-simple\";

function fn(simple) {
    var no = simple();
}

function outer(simple) {
    function inner() {
        var no = simple();
    }
}"
`;

exports[`assignment-only.js 1`] = `
"// {\"react-simple\": {\"default\": true}}
import simple from \"react-simple\";

var no = simple;"
`;

exports[`basic.js 1`] = `
"// {\"modules\": {\"react-simple\": {\"default\": true}}}
import simple from \"react-simple\";

const Foo = simple(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`custom.js 1`] = `
"// {\"modules\": {\"other\": {\"default\": true}}}
import createComponent from \"other\";

const Foo = createComponent(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`declaration-shadow.js 1`] = `
"// {\"react-simple\": {\"default\": true}}
import simple from \"react-simple\";

function fn() {
    const simple = () => null;
    var no = simple();
}

function outer() {
    const simple = () => null;
    function inner() {
        var no = simple();
    }
}"
`;

exports[`export.js 1`] = `
"// {\"modules\": {\"react-simple\": {\"default\": true}}}
import simple from \"react-simple\";

export const Foo = simple(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`inside-function.js 1`] = `
"// {\"modules\": {\"react-simple\": {\"default\": true}}}
import simple from \"react-simple\";

function fn() {
    const Foo = simple(\"div\", {
        color: \"red\"
    });
    Foo.displayName = \"Foo\";
}

function outer() {
    function inner() {
        const Foo = simple(\"div\", {
            color: \"red\"
        });
        Foo.displayName = \"Foo\";
    }
}"
`;

exports[`local-default-export.js 1`] = `
"// {\"modules\": {\"./tests/fixtures/local\": {\"default\": true}}}
import createComponent, { no } from \"./local\";

const Foo = createComponent(\"div\", {
    color: \"red\"
});

Foo.displayName = \"Foo\";
var nope = no();"
`;

exports[`local-named-export.js 1`] = `
"// {\"modules\": {\"./tests/fixtures/local\": {\"createComponent\": true}}}
import { createComponent as other, no } from \"./local\";

const Foo = other(\"div\", {
    color: \"red\"
});

Foo.displayName = \"Foo\";
var nope = no();"
`;

exports[`named-export.js 1`] = `
"// {\"modules\": {\"amodule\": {\"createComponent\": true}}}
import noDefault, { createComponent, no } from \"amodule\";

const Foo = createComponent(\"div\", {
    color: \"red\"
});

Foo.displayName = \"Foo\";
var nopeDefault = noDefault();
var nope = no();"
`;

exports[`named-export-as.js 1`] = `
"// {\"modules\": {\"amodule\": {\"createComponent\": true}}}
import { createComponent as other, no } from \"amodule\";

const Foo = other(\"div\", {
    color: \"red\"
});

Foo.displayName = \"Foo\";
var nope = no();"
`;
